doc: Fix enums.texi failure on out-of-tree builds
enums.texi is a generated file so we should not look for it in $(srcdir).
When we do, chaos ensues:

    mv -f enums.texi-tmp enums.texi
    mkdir enums
    ../../doc/scripts/split-texi.pl enums enum < ../../doc/enums.texi
    /bin/bash: ../../doc/enums.texi: No such file or directory
    make[4]: *** [stamp_enums] Error 1
    make[4]: Leaving directory `/home/user/gnutls/build/doc'
    make[3]: *** [all-recursive] Error 1
    make[3]: Leaving directory `/home/user/gnutls/build/doc'
    make[2]: *** [all] Error 2
    make[2]: Leaving directory `/home/user/gnutls/build/doc'
    make[1]: *** [all-recursive] Error 1
    make[1]: Leaving directory `/home/user/gnutls/build'
    make: *** [all] Error 2

Signed-off-by: Kevin Cernekee <cernekee@gmail.com>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -429,7 +429,7 @@ stamp_functions: $(API_FILES)
 
 stamp_enums: enums.texi
 	-mkdir enums
-	$(srcdir)/scripts/split-texi.pl enums enum < $(srcdir)/enums.texi
+	$(srcdir)/scripts/split-texi.pl enums enum < $<
 	echo $@ > $@
 
 $(ENUMS): stamp_enums
@@ -449,7 +449,7 @@ compare-exported:
 	rm -f tmp-exp-$@ tmp-head-$@
 
 compare-makefile: enums.texi
-	ENUMS=`grep '^@c ' $(srcdir)/enums.texi | sed 's/@c //g' | sort -d`; \
+	ENUMS=`grep '^@c ' $< | sed 's/@c //g' | sort -d`; \
 	STR=""; \
 	for i in $$ENUMS; do \
 		STR="$$STR\nENUMS += enums/$$i"; \
