Fix build failures involving doc/invoke-*.texi
Several problems were found in this area:

1) Currently, if SRC_DEF_* are undefined, autogen will get invoked with
no input file and it will hang forever waiting for content from stdin:

    mv -f enums.texi-tmp enums.texi
    mkdir enums
    ../../doc/scripts/split-texi.pl enums enum < enums.texi
    echo stamp_enums > stamp_enums
    cd ../src/ && autogen -Tagtexi-cmd.tpl  && \
        rm -f ../doc/invoke-gnutls-cli.texi && \
        ../doc/scripts/cleanup-autogen.pl <../src/invoke-gnutls-cli.texi >../doc/invoke-gnutls-cli.texi.tmp && \
        mv -f ../doc/invoke-gnutls-cli.texi.tmp ../doc/invoke-gnutls-cli.texi && \
        rm -f ../src/invoke-gnutls-cli.texi
    <HANG>

Since these documents are @include'd by other documents, it is probably
a good idea to make sure the targets are buildable in case they get
listed as prerequisites.

2) SRC_DEF_* used relative paths which are correct for an in-place build,
but incorrect for an out-of-tree build.  They should use something like
$(top_srcdir)/src to resolve the ambiguity.

3) cleanup-autogen.pl was also referenced using a relative pathname,
breaking out-of-tree builds.

4) The non-portable "sed -i" flag was used.

Signed-off-by: Kevin Cernekee <cernekee@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -689,16 +689,8 @@ src/gl/warn-on-use.h
 doc/stamp_invoke
 src/gl/libgnu_gpl.a
 src/gl/libgnu_gpl.la
-doc/invoke-certtool.texi
-doc/invoke-danetool.texi
-doc/invoke-gnutls-cli-debug.texi
-doc/invoke-gnutls-cli.texi
-doc/invoke-gnutls-serv.texi
-doc/invoke-ocsptool.texi
-doc/invoke-p11tool.texi
-doc/invoke-psktool.texi
-doc/invoke-srptool.texi
-doc/invoke-tpmtool.texi
+doc/invoke-*.texi
+doc/invoke-*.menu
 doc/parse-datetime.texi
 tests/fips-test
 tests/global-init
